[pantheon] filters are fixed on mobile

--- a/pantheon/css/style.css
+++ b/pantheon/css/style.css
@@ -110,6 +110,7 @@ section.cover .step--bubbles i:last-of-type {
 
 section.filters {
     background: #dedede;
+    z-index: 1000;
 }
 
 section.filters div.filters__wrapper {
